--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,22 @@
 asgiref==3.7.2
-boto3==1.34.28
-botocore==1.34.28
+boto==2.49.0
+boto3==1.34.37
+botocore==1.34.37
 dj-database-url==0.5.0
-Django==4.2.8
-django-allauth==0.61.0
-django-allauth-2fa==0.11.1
+Django==3.2.24
+django-allauth==0.41.0
 django-countries==7.2.1
 django-crispy-forms==1.14.0
-django-filter==23.5
-django-otp==1.3.0
 django-storages==1.14.2
 gunicorn==21.2.0
 jmespath==1.0.1
 oauthlib==3.2.2
 pillow==10.2.0
 psycopg2==2.9.9
-PyJWT==2.8.0
-pypng==0.20220715.0
 python3-openid==3.2.0
-pytz==2023.3.post1
-qrcode==7.4.2
+pytz==2024.1
 requests-oauthlib==1.3.1
 s3transfer==0.10.0
 sqlparse==0.4.4
-stripe==7.13.0
+stripe==8.1.0
 urllib3==1.26.18
