--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ botocore==1.34.73
 dj-database-url==0.5.0
 Django==3.2.24
 django-allauth==0.41.0
+django-ckeditor==6.7.1
 django-countries==7.2.1
 django-crispy-forms==1.14.0
+django-js-asset==2.2.0
 django-storages==1.14.2
 gunicorn==21.2.0
 jmespath==1.0.1
