--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,17 @@ botocore==1.34.73
 dj-database-url==0.5.0
 Django==3.2.24
 django-allauth==0.41.0
+django-ckeditor==6.7.1
 django-countries==7.2.1
 django-crispy-forms==1.14.0
 django-js-asset==2.2.0
+django-pandas==0.6.7
 django-storages==1.14.2
 gunicorn==21.2.0
 jmespath==1.0.1
+numpy==2.0.0
 oauthlib==3.2.2
+pandas==2.2.2
 pillow==10.2.0
 psycopg2==2.9.9
 python3-openid==3.2.0
@@ -19,4 +23,5 @@ requests-oauthlib==2.0.0
 s3transfer==0.10.0
 sqlparse==0.4.4
 stripe==8.1.0
+tzdata==2024.1
 urllib3==1.26.18
