--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ boto3==1.34.37
 botocore==1.34.73
 dj-database-url==0.5.0
 Django==3.2.24
-django-allauth==0.41.0
+django-allauth==0.57.0
 django-countries==7.2.1
 django-crispy-forms==1.14.0
 django-js-asset==2.2.0
@@ -15,6 +15,7 @@ oauthlib==3.2.2
 pandas==2.2.2
 pillow==10.2.0
 psycopg2==2.9.9
+PyJWT==2.8.0
 python3-openid==3.2.0
 pytz==2024.1
 requests-oauthlib==2.0.0
